syntax = "proto3";
package userServer;
option go_package = "tinytiktok/user/proto/server";
import "user/register.proto";
import "user/login.proto";
import "user/info.proto";
import "user/favorite.proto";
import "user/publish.proto";


service UserService {
  rpc Register (register.RegisterRequest) returns (register.RegisterResponse) {}
  rpc Login (login.LoginRequest) returns (login.LoginResponse) {}
  rpc Info (info.UserRequest) returns (info.UserResponse) {}
  // 用户点赞或取消点赞
  rpc CalcFavoriteCount (favorite.CalcFavoriteCountRequest) returns (favorite.CalcFavoriteCountResponse) {}
  // 用户发表/删除视频时需要增加/减少用户的作品数量
  rpc CalcWorkCount (publish.CalcWorkCountRequest) returns (publish.CalcWorkCountResponse) {}
}